--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title data-lang-es="Abrahan Chaurio - Business Intelligence & Data Analyst" data-lang-en="Abrahan Chaurio - Business Intelligence & Data Analyst">Abrahan Chaurio - Business Intelligence & Data Analyst</title>
+    <title data-lang-es="Abrahan Chaurio - Business Intelligence & Growth Analyst" data-lang-en="Abrahan Chaurio - Business Intelligence & Growth Analyst">Abrahan Chaurio - Business Intelligence & Growth Analyst</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
