--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <section id="home-about" class="text-center section-padding">
             <img src="Bondi11.png" alt="Foto de Abrahan Chaurio" class="profile-pic">
             <h1 class="main-headline" data-lang-es="Abrahan Chaurio" data-lang-en="Abrahan Chaurio">Abrahan Chaurio</h1>
-            <p class="sub-headline" data-lang-es="Business Intelligence & Data Analyst | Transformando Datos en Decisiones Estratégicas" data-lang-en="Business Intelligence & Data Analyst | Turning Data into Strategic Decisions">Business Intelligence & Data Analyst | Transformando Datos en Decisiones Estratégicas </p>
+            <p class="sub-headline" data-lang-es="Business Intelligence & Growth Analyst | Transformando Datos en Crecimiento Escalable y Decisiones Estratégicas" data-lang-en="Business Intelligence & Growth Analyst | Turning Data into Scalable Growth & Strategic Decisions">Business Intelligence & Growth Analyst | Turning Data into Scalable Growth & Strategic Decisions </p>
 
             <div class="bio-text">
                 <p data-lang-es="¡Hola! Soy Abrahán Chaurio." data-lang-en="Hi! I'm Abrahán Chaurio.">¡Hola! Soy Abrahán Chaurio.</p>
