--- a/index.html
+++ b/index.html
@@ -108,10 +108,9 @@
             <img src="Bondi11.png" alt="Foto de Abrahan Chaurio" class="profile-pic">
             <h1 class="main-headline" data-lang-es="Abrahan Chaurio" data-lang-en="Abrahan Chaurio">Abrahan Chaurio</h1>
             <p class="sub-headline" 
-                data-lang-es="Business-Focused Data Analyst | BI, Customer & Product Strategy | Bridging Data, People & Action.<br>Transformo datos en decisiones que generan crecimiento, retención y experiencias memorables." 
+                data-lang-es="Business-Focused Data Analyst | BI, Customer & Product Strategy | Conectando datos, personas y decisiones.<br>Transformo datos en decisiones que generan crecimiento, retención y experiencias memorables." 
                 data-lang-en="Business-Focused Data Analyst | BI, Customer & Product Strategy | Bridging Data, People & Action.<br>I turn data into decisions that drive growth, retention, and meaningful customer experiences.">
-                Business-Focused Data Analyst | BI, Customer & Product Strategy | Bridging Data, People & Action.<br>
-                I turn data into decisions that drive growth, retention, and meaningful customer experiences.
+                Business-Focused Data Analyst | BI, Customer & Product Strategy | Bridging Data, People & Action.<br>I turn data into decisions that drive growth, retention, and meaningful customer experiences.
             </p>
 
             
@@ -120,7 +119,7 @@
 
                 <p data-lang-es="Soy un analista de datos con mentalidad de negocio, enfoque estratégico y vocación humana." data-lang-en="I'm a data analyst with a business mindset, strategic focus, and a human-first approach.">Soy un analista de datos con mentalidad de negocio, enfoque estratégico y vocación humana.</p>
 
-                <p data-lang-es="Con una Licenciatura en Administración de Empresas y más de 8 años de experiencia en fintech, telecomunicaciones y e‑commerce, combino el análisis riguroso con la comprensión de procesos, equipos y decisiones reales." data-lang-en="With a Bachelor's Degree in Business Administration and over 8 years of experience in fintech, telecommunications, and e‑commerce, I combine deep analysis with a strong understanding of processes, teams, and real-world decisions.">Con una Licenciatura en Administración de Empresas y más de 8 años de experiencia en fintech, telecomunicaciones y e‑commerce, combino el análisis riguroso con la comprensión de procesos, equipos y decisiones reales.</p>
+                <p data-lang-es="Con una Licenciatura en Administración de Empresas y más de 8 años de experiencia en e‑commerce, telecomunicaciones y fintech , combino el análisis riguroso con la comprensión de procesos, equipos y decisiones reales." data-lang-en="With a Bachelor's Degree in Business Administration and over 8 years of experience in fintech, telecommunications, and e‑commerce, I combine deep analysis with a strong understanding of processes, teams, and real-world decisions.">Con una Licenciatura en Administración de Empresas y más de 8 años de experiencia en e‑commerce, telecomunicaciones y fintech, combino el análisis riguroso con la comprensión de procesos, equipos y decisiones reales.</p>
 
                 <p data-lang-es="Creo que los datos no son boletines de notas, sino brújulas. Mi trabajo es convertirlos en decisiones que generen crecimiento, eficiencia y experiencias de cliente memorables." data-lang-en="I believe data isn't just a report card — it's a compass. My work is about turning it into decisions that drive growth, efficiency, and memorable customer experiences.">Creo que los datos no son boletines de notas, sino brújulas. Mi trabajo es convertirlos en decisiones que generen crecimiento, eficiencia y experiencias de cliente memorables.</p>
 
