--- a/index.html
+++ b/index.html
@@ -134,18 +134,30 @@
          Experiencia real en mediación, tasación y facturación (Telecom – Atos, 2020–2024) e integraciones API en fintech (Increase, 2019–2020). Documentación clara, UAT sólida y validaciones con SQL cuando aportan valor.
       </p>
 <h4 data-lang-en="How I add value:" data-lang-es="Cómo aporto valor:">Cómo aporto valor:</h4>
-<p class="value-bullets" data-lang-en="🧭 Requirements &amp; documentation: user stories, acceptance criteria, actionable minutes." data-lang-es="🧭 Levantamiento &amp; documentación: historias de usuario, criterios de aceptación, actas accionables.">
-         🧭 Levantamiento &amp; documentación: historias de usuario, criterios de aceptación, actas accionables.
-      </p>
-<p class="value-bullets" data-lang-en="🗺️ Processes &amp; design: BPMN, flowcharts, use cases, ROI-based prioritization." data-lang-es="🗺️ Procesos &amp; diseño: BPMN, diagramas de flujo, casos de uso, priorización por ROI.">
-         🗺️ Procesos &amp; diseño: BPMN, diagramas de flujo, casos de uso, priorización por ROI.
-      </p>
-<p class="value-bullets" data-lang-en="✅ Quality &amp; UAT: test plans, end-to-end scenarios, Jira/Confluence management." data-lang-es="✅ Calidad &amp; UAT: planes de prueba, escenarios end-to-end, gestión con Jira/Confluence.">
-         ✅ Calidad &amp; UAT: planes de prueba, escenarios end-to-end, gestión con Jira/Confluence.
-      </p>
-<p class="value-bullets" data-lang-en="📈 BI as functional support: SQL validations, data checks, decision dashboards." data-lang-es="📈 BI como soporte funcional: validaciones SQL, checks de datos, dashboards para decisión.">
-         📈 BI como soporte funcional: validaciones SQL, checks de datos, dashboards para decisión.
-      </p>
+<p class="value-bullets"
+   data-lang-en="🧭 Requirements &amp; documentation: clear user stories, acceptance criteria, and actionable meeting notes."
+   data-lang-es="🧭 Levantamiento &amp; documentación: historias de usuario claras, criterios de aceptación y actas accionables.">
+   🧭 Levantamiento &amp; documentación: historias de usuario claras, criterios de aceptación y actas accionables.
+</p>
+
+<p class="value-bullets"
+   data-lang-en="🗺️ Processes &amp; design: BPMN, flowcharts, use cases — focused on billing accuracy, data-flow efficiency, and revenue assurance."
+   data-lang-es="🗺️ Procesos &amp; diseño: BPMN, diagramas de flujo, casos de uso — enfocados en precisión de facturación, eficiencia del flujo de datos y revenue assurance.">
+   🗺️ Procesos &amp; diseño: BPMN, diagramas de flujo, casos de uso — enfocados en precisión de facturación, eficiencia del flujo de datos y revenue assurance.
+</p>
+
+<p class="value-bullets"
+   data-lang-en="✅ Quality &amp; UAT: end-to-end test plans, scenario validation, and Jira/Confluence tracking to ensure audit-ready traceability."
+   data-lang-es="✅ Calidad &amp; UAT: planes de prueba end-to-end, validación de escenarios y seguimiento en Jira/Confluence para garantizar trazabilidad audit-ready.">
+   ✅ Calidad &amp; UAT: planes de prueba end-to-end, validación de escenarios y seguimiento en Jira/Confluence para garantizar trazabilidad audit-ready.
+</p>
+
+<p class="value-bullets"
+   data-lang-en="📈 BI &amp; financial integrity: SQL validations, data checks, and decision dashboards supporting Revenue Assurance, BI, and Product teams."
+   data-lang-es="📈 BI &amp; integridad financiera: validaciones SQL, verificaciones de datos y dashboards para decisión que respaldan a los equipos de Revenue Assurance, BI y Producto.">
+   📈 BI &amp; integridad financiera: validaciones SQL, verificaciones de datos y dashboards para decisión que respaldan a los equipos de Revenue Assurance, BI y Producto.
+</p>
+
 <div class="cta-row">
 <span class="chip" data-lang-en="BPMN" data-lang-es="BPMN">BPMN</span>
 <span class="chip" data-lang-en="UAT" data-lang-es="UAT">UAT</span>
@@ -160,8 +172,11 @@
 <!-- QUÉ HAGO / PROPUESTA DE VALOR -->
 <section class="section-padding" id="value">
 <h2 data-lang-en="What I Do" data-lang-es="Qué hago">Qué hago</h2>
-<p class="bio-text" data-lang-en="I connect business and IT to design and improve financial processes with a focus on ROI, efficiency and data quality." data-lang-es="Conecto negocio y TI para diseñar y mejorar procesos financieros con foco en ROI, eficiencia y calidad de datos.">
-      Conecto negocio y TI para diseñar y mejorar procesos financieros con foco en ROI, eficiencia y calidad de datos.
+<p class="bio-text" data-lang-en="I help organizations uncover hidden inefficiencies and transform financial operations through automation, data integrity, and clear process design.
+My goal is to turn every workflow into a measurable source of value — connecting teams, systems, and strategy through structured execution and continuous improvement." data-lang-es="Ayudo a las organizaciones a descubrir ineficiencias ocultas y transformar sus operaciones financieras mediante automatización, integridad de datos y diseño de procesos claros.
+Mi objetivo es convertir cada flujo de trabajo en una fuente medible de valor, conectando equipos, sistemas y estrategia mediante ejecución estructurada y mejora continua.">
+      Ayudo a las organizaciones a descubrir ineficiencias ocultas y transformar sus operaciones financieras mediante automatización, integridad de datos y diseño de procesos claros.
+Mi objetivo es convertir cada flujo de trabajo en una fuente medible de valor, conectando equipos, sistemas y estrategia mediante ejecución estructurada y mejora continua.
     </p>
 <div class="skills-section">
 <h3 class="skills-headline" data-lang-en="Key Practices" data-lang-es="Prácticas clave">Prácticas clave</h3>
